--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:2.0.0'
     }
 }
 
@@ -16,9 +16,9 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:23.1.0"
-    compile "com.android.support:gridlayout-v7:23.1.0"
-    compile "com.android.support:cardview-v7:23.1.0"
+    compile "com.android.support:support-v4:23.3.0"
+    compile "com.android.support:gridlayout-v7:23.3.0"
+    compile "com.android.support:cardview-v7:23.3.0"
 }
 
 // The sample build uses multiple directories to
@@ -55,4 +55,8 @@ android {
 
     }
 
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = "2.12"
 }
