--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: android
 android:
   components:
-    - build-tools-27
+    - build-tools-27.0.2
     - android-27
     - add-on
     - extra
+
+licenses:
+    - 'android-sdk-license-.+'
